# master-reto-empresarial

./: .gitignore  README.md
Federated Learning/entrega_federated_learning/Entrega Practical C - Enrique Lahuerta/: informe_federated_learning.docx
Federated Learning/entrega_federated_learning/Entrega Practical C - Enrique Lahuerta/practical-c/: analysis.ipynb  pyproject.toml
Federated Learning/entrega_federated_learning/Entrega Practical C - Enrique Lahuerta/practical-c/pytorchexample/: client_app.py  server_app.py  task.py
Federated Learning/final-project/: README.md
Federated Learning/practical-c/: Practical_C.ipynb  pyproject.toml
Federated Learning/practical-c/pytorchexample/: client_app.py  server_app.py  task.py
glucovibes/scripts/: fase2_limpieza_local.py  fase3_feature_engineering_local.py  fase4b_parche_modelos.py
glucovibes_peak/: app.py  generar_guion_b.py  glucovibes_presentacion (1).pptx  guion_glucovibes.md  requirements_demo.txt
glucovibes_peak/glucovibes/notebooks/: glucovibes_pico_notebook.ipynb
glucovibes_peak/glucovibes/scripts/: fase3b_features_pico.py  fase4_clustering_modelado_local.py  fase5_modelado_pico.py  fase5b_produccion.py
